--- a/HackwichFour/Base.lproj/Main.storyboard
+++ b/HackwichFour/Base.lproj/Main.storyboard
@@ -8,10 +8,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Second View Controller-->
         <scene sceneID="Kdl-Mb-B8k">
             <objects>
-                <viewController id="9vJ-JQ-U3L" sceneMemberID="viewController">
+                <viewController id="9vJ-JQ-U3L" customClass="secondViewController" customModule="HackwichFour" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="jij-9A-yNc">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -28,6 +28,9 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
                     <navigationItem key="navigationItem" id="mZI-d3-6wj"/>
+                    <connections>
+                        <outlet property="secondTabLabel" destination="m4T-BV-CH9" id="VRn-0A-CXs"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fAc-6H-lZo" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -36,7 +39,7 @@
         <!--View Controller-->
         <scene sceneID="ehp-IC-Zty">
             <objects>
-                <viewController id="c20-6a-wBk" customClass="ViewController" customModule="HackwichFour" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="c20-6a-wBk" customClass="ViewController" customModule="HackwichFour" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="hYU-Cu-t8s">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -54,7 +57,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="Qob-EP-wAs"/>
                     <connections>
-                        <outlet property="firstTabLabel" destination="hYU-Cu-t8s" id="Ngf-Bj-LDM"/>
+                        <outlet property="firstTabLabel" destination="JbI-4N-QVY" id="xEC-mn-vBL"/>
                         <outlet property="firtTabLabel" destination="JbI-4N-QVY" id="Hev-sa-OhD"/>
                     </connections>
                 </viewController>
